Add tests of the java options showing they don't work

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
-envlist = py3
 skipsdist = True
 
 [testenv]
+basepython = python3
 passenv = JAVA_HOME
 deps =
     pytest
     plumbum
 commands =
-    py.test -s tests
+    test: py.test -s tests -k test_jvmquake_
+    test_jvm: py.test -s tests -k test_jvm_
