Compile with librt and test against multiple Ubuntus
Most linux distros don't have clock_gettime as part of libc, so we
should compile with -lrt until there is a better option. Also
Now the docker images run tests against bionic and xenial.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ services:
   - docker
 
 before_install:
-  - docker build . -t jolynch/jvmquake:test
+  - docker build -f dockerfiles/Dockerfile.bionic . -t jolynch/jvmquake:test_bionic
+  - docker build -f dockerfiles/Dockerfile.xenial . -t jolynch/jvmquake:test_xenial
 
 script:
-  - docker run jolynch/jvmquake:test 
+  - docker run jolynch/jvmquake:test_bionic && docker run jolynch/jvmquake:test_xenial
 
