--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,9 @@ skipsdist = True
 
 [testenv]
 basepython = python3
-passenv = JAVA_HOME
+passenv =
+    JAVA_HOME
+    AGENT_PATH
 deps =
     pytest
     plumbum
