Further factor out java deps for tests

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,11 +3,11 @@ ifndef JAVA_HOME
 endif
 
 BUILD ?= ../build
-SO_NAME ?= libjvmquake.so
-TARGET= $(BUILD)/$(SO_NAME)
+SO_NAME ?= libjvmquake-$(shell uname -s -m | tr 'A-Z' 'a-z' | tr ' ' '-').so
+TARGET = $(BUILD)/$(SO_NAME)
 
-INCLUDE= -I"$(JAVA_HOME)/include" -I"$(JAVA_HOME)/include/linux"
-CFLAGS=-Wall -Werror -fPIC -shared $(INCLUDE) -lrt
+INCLUDE = -I"$(JAVA_HOME)/include" -I"$(JAVA_HOME)/include/linux"
+CFLAGS =-Wall -Werror -fPIC -shared $(INCLUDE) -lrt
 
 .PHONY: all
 
