Test all the things
Now we test centos and focal have a path forward for testing all the things.

--- a/dockerfiles/packaging/Dockerfile
+++ b/dockerfiles/packaging/Dockerfile
@@ -4,9 +4,9 @@ FROM ubuntu:$UBUNTU_VERSION
 RUN apt-get update
 RUN apt-get install -y debhelper
 
-WORKDIR /work
+WORKDIR /work/packaging
 
-COPY packaging/debian /work/debian
-COPY build/libjvmquake-linux-x86_64.so /work/libjvmquake.so
+COPY packaging /work/packaging
+COPY build/libjvmquake-linux-x86_64.so /work/packaging/libjvmquake.so
 
 CMD ["dpkg-buildpackage", "-us", "-uc"]
