--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,19 @@
 ---
-sudo: required
+language: c
+sudo: false
 
 env:
-  - UBUNTU_VERSION=18.04 JAVA_VERSION=8
-  - UBUNTU_VERSION=18.04 JAVA_VERSION=11
-  - UBUNTU_VERSION=16.04 JAVA_VERSION=8
-  - UBUNTU_VERSION=16.04 JAVA_VERSION=9
+  - TARGET=test_xenial_java8
+  - TARGET=test_bionic_java8
+  - TARGET=test_focal_java8
+  - TARGET=test_centos7_java8
+  # Need some fixes for java 11 to work with the test suite
+  #- TARGET=test_xenial_java11
+  #- TARGET=test_bionic_java11
+  #- TARGET=test_centos7_java11
 
 services:
   - docker
 
-before_install:
-  - docker build -f dockerfiles/build/Dockerfile . -t jolynch/jvmquake:build
-  - docker build -f dockerfiles/test/Dockerfile . -t jolynch/jvmquake:test_${UBUNTU_VERSION}_${JAVA_VERSION}
-
 script:
-  - docker container create --name jvmquake-build jolynch/jvmquake:build
-  - docker container cp jvmquake-build:/work/build/. ./build/
-  - docker container rm -f jvmquake-build
-  - docker run -v $(pwd)/build/:/work/build/ jolynch/jvmquake:test_${UBUNTU_VERSION}_${JAVA_VERSION}
-
+  - make $TARGET
