Add a bunch more test environments

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,11 @@ env:
   matrix:
   - TARGET=test_xenial_openjdk8
   - TARGET=test_bionic_openjdk8
+  - TARGET=test_bionic_openjdk11
   - TARGET=test_bionic_zulu8
+  - TARGET=test_bionic_zulu11
   - TARGET=test_focal_openjdk8
+  - TARGET=test_focal_openjdk11
   - TARGET=test_centos7_openjdk8
 
 jobs:
