Add new minimal test suites that dont even install python
Also cleans up the makefile so we can easily extend to new OS and JVM
versions

--- a/dockerfiles/test/Dockerfile.ubuntu.zulu.minimal
+++ b/dockerfiles/test/Dockerfile.ubuntu.zulu.minimal
@@ -26,21 +26,11 @@ RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 0xB1998361
 RUN apt-add-repository 'deb http://repos.azulsystems.com/ubuntu stable main'
 RUN apt-get update
 RUN apt-get install -y zre-$JAVA_VERSION
-RUN apt-get install -y make
-RUN apt-get install -y python3-minimal python3-pip
-
-RUN python3 -m pip install pip --upgrade
-RUN python3 -m pip install tox
 
 WORKDIR /work
 
 COPY --from=builder /work/tests/. /work/tests
-COPY --from=builder /work/Makefile /work/Makefile
-COPY --from=builder /work/tox.ini /work/tox.ini
-COPY tests/run_tests.sh /work/run_tests.sh
+COPY tests/run_smoke_test.sh /work/run_smoke_test.sh
 
 ENV JAVA_HOME /usr/lib/jvm/zre-$JAVA_VERSION-amd64
-# This should get mounted in if we want to use it
-ENV AGENT_DIR /work/build/
-
-CMD ["/work/run_tests.sh"]
+CMD ["/work/run_smoke_test.sh"]
