Add -flto so clang also links only against libc

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ SO_NAME ?= libjvmquake-$(shell uname -s -m | tr 'A-Z' 'a-z' | tr ' ' '-').so
 TARGET = $(BUILD)/$(SO_NAME)
 
 INCLUDE = -I"$(JAVA_HOME)/include" -I"$(JAVA_HOME)/include/linux"
-CFLAGS =-Wall -Werror -fPIC -shared $(INCLUDE) -lrt
+CFLAGS =-Wall -Werror -fPIC -flto -shared $(INCLUDE) -lrt
 
 .PHONY: all
 
